turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:2: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  ligne();leveCrayon();gauche(90);avance(200);droite(90);avance(150);baisseCrayon();ligne();leveCrayon();gauche(90);avance(50);droite(90);recule(75);baisseCrayon();motif();gauche(90);avance(150);droite();baisseCrayon();motif()
                                                                                                                                                                                                         ^